# internal/notification/model/model.go
@@ -1,9 +1,11 @@
-package notification
+package model
 
 import (
 	"time"
 )
 
+// Notification represents a notification payload
+// swagger:model
 type Notification struct {
 	NotificationID   string    `bson:"notification_id" json:"notification_id"`  // custom ID
 	Type             string    `bson:"type" json:"type"`                         // transactional, promotional, etc.
@@ -13,6 +15,8 @@ type Notification struct {
 	SendAt           string    `bson:"send_at" json:"send_at"`
 	Priority         string    `bson:"priority" json:"priority"`
 	MaximumRetries   string    `bson:"maximum_retries" json:"maximum_retries"`
+	// CreatedDate is the time the notification was created
+	// example: 2025-07-08T14:00:00Z
 	CreatedDate      time.Time `json:"created_date" bson:"created_date"`
 	CreatedByName    string    `json:"created_by_name" bson:"created_by_name"`
 	CreatedById      string    `json:"created_by_id" bson:"created_by_id"`
